Fix text button on Firefox

--- a/web/app/style/global.less
+++ b/web/app/style/global.less
@@ -49,24 +49,6 @@ a {
     height: 50px;
   }
 
-  &.text {
-    .link();
-
-    background: none;
-    font-weight: 500;
-    height: 0;
-    line-height: 1.4rem;
-    padding: 0;
-
-    &:hover {
-      text-decoration: underline;
-    }
-
-    &:focus {
-      outline: none;
-    }
-  }
-
   &.confirm-delete {
     background: @color-delete;
   }
