--- a/web/app/style/omattiedot.less
+++ b/web/app/style/omattiedot.less
@@ -21,6 +21,11 @@
             margin: 0;
             line-height: 1.4rem;
           }
+
+          a {
+            font-size: 0.85rem;
+            line-height: 1.4rem;
+          }
         }
 
         &__name {
